<resources>
    <string name="app_name">Edelwish</string>

    <string name="sign_up_title_txt">Sign up to Edelwish</string>
    <string name="waiting_txt">Please waiting...</string>
    <string name="welcome_txt">Welcome,</string>

    <string name="email_txt">Email</string>
    <string name="password_txt">Password</string>
    <string name="first_name_txt">First Name</string>
    <string name="last_name_txt">Last Name</string>
    <string name="repassword_txt">Confirm Password</string>
    <string name="have_an_account_txt">Already have an account?</string>
    <string name="sign_in_txt">Sign In</string>
    <string name="sign_up_txt">Sign Up</string>
    <string name="sign_up_guidance_txt">Don\'t have an account?</string>
    <string name="sign_up_action_txt">Sign up here</string>
    <string name="click_here_txt">Click here</string>

    <string name="schedule_title_txt">Wedding Schedule</string>

    <string name="office_txt">Office</string>
    <string name="workshop_txt">Workshop</string>
    <string name="phone_txt">Phone</string>
    <string name="detail_txt">Detail</string>
    <string name="delete_txt">Delete</string>

    <string name="name_txt">Name</string>
    <string name="address_txt">Address</string>
    <string name="event_date_txt">Event Date</string>
    <string name="event_time_txt">Event Time</string>
    <string name="category_txt">Category</string>
    <string name="booking_fee_txt">Booking Fee</string>
    <string name="booking_guide_txt">Your booking status can be seen on Wedding Schedule</string>
    <string name="submit_txt">Process</string>

    <string name="later_txt">Later</string>
    <string name="payment_direction_txt">Go to Payment</string>
    <string name="payment_options_txt">Payment Options</string>
    <string name="payment_amount_txt">Amount</string>
    <string name="payment_receipt_txt">Receipt</string>

    <string name="booking_success_txt">Booking Success!</string>
    <string name="payment_booking_complete_txt">Payment Confirmation uploaded,</string>
    <string name="payment_booking_contact_txt">Contact us more info</string>
    <string name="payment_booking_guidance_txt">Note:\nYour booking status can be seen on Wedding Schedule</string>

    <string name="gallery_txt">Gallery</string>
    <string name="package_txt">Package</string>
    <string name="booking_txt">Booking</string>
    <string name="schedule_txt">Schedule</string>
    <string name="testimonial_txt">Testimonial</string>
    <string name="payment_txt">Payment</string>
    <string name="about_us_txt">About Us</string>
    <string name="sign_out_txt">Sign out</string>

    <string name="path_txt">Path</string>

    <string name="package_name_txt">Package Name</string>
    <string name="package_price_txt">Package Price</string>
    <string name="total_buffet_txt">Total Buffet</string>
    <string name="buffet_type_txt">Buffet</string>
    <string name="buffet_detail_txt">Detail Buffet</string>
    <string name="detail_package_txt">Detail Package</string>
    <string name="bonus_package_txt">Bonus</string>
    <string name="add_bonus_txt">+ Add Bonus</string>

    <string name="edit_txt">Edit</string>
    <string name="ok_txt">OK</string>
    <string name="no_txt">NO</string>
    <string name="filter_txt">Filter</string>
    <string name="export_txt">Export</string>
    <string name="success_txt">Success</string>
    <string name="warning_title_txt">Warning</string>
    <string name="warning_registration_txt">Required fields must be filled in</string>
    <string name="warning_registration_password_confirmation_txt">Please make sure your password match.</string>
    <string name="sign_out_message_txt">Do you want to sign out?</string>
    <string name="deletion_txt">Do you want to delete it?</string>
    <string name="error_title_txt">Error</string>
    <string name="package_success_txt">Package Success!</string>
    <string name="payment_success_txt">Payment Success!</string>
    <string name="testimonial_success_txt">Testimonial Success!</string>
    <string name="success_registration_txt">Your registration successful.</string>
    <string name="authenticated_failure_txt">Email and password didn\'t matched.</string>
    <string name="no_data_txt">There is/are no data.</string>
</resources>