<?xml version="1.0" encoding="utf-8"?>
<com.noscale.edelweiss.common.widget.EdelweissConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:padding="@dimen/_17sdp"
    >

    <ScrollView
        android:id="@+id/sv_payment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_payment_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_payment_pick"
                android:layout_width="@dimen/_84sdp"
                android:layout_height="@dimen/_167sdp"
                android:adjustViewBounds="true"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/ic_camera_alt"
                />
            <com.noscale.edelweiss.common.widget.typography.EdelweissBody1TextView
                android:id="@+id/tv_payment_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/path_txt"
                />

            <com.noscale.edelweiss.common.widget.typography.EdelweissBody1TextView
                android:id="@+id/tv_payment_booking_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginBottom="@dimen/_3sdp"
                android:text="@string/booking_txt"
                />

            <com.noscale.edelweiss.common.EdelweissSpinner
                android:id="@+id/sp_payment_booking_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <com.noscale.edelweiss.common.widget.typography.EdelweissBody1TextView
                android:id="@+id/tv_payment_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_options_txt"
                />

            <com.noscale.edelweiss.common.EdelweissSpinner
                android:id="@+id/sp_payment_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <com.noscale.edelweiss.common.widget.typography.EdelweissBody1TextView
                android:id="@+id/tv_payment_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_amount_txt"
                />

            <com.noscale.edelweiss.common.EdelweissCurrencyEditText
                android:id="@+id/et_payment_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="numberDecimal"
                />

            <com.noscale.edelweiss.common.widget.EdelweissButton
                android:id="@+id/b_payment_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit_txt"
                />

        </LinearLayout>

    </ScrollView>

</com.noscale.edelweiss.common.widget.EdelweissConstraintLayout>