<?xml version="1.0" encoding="utf-8"?>
<com.noscale.edelweiss.common.widget.EdelweissConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_17sdp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        >

        <com.noscale.edelweiss.common.widget.typography.EdelweissBody1TextView
            android:id="@+id/tv_booking_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/booking_success_txt"
            android:layout_marginBottom="@dimen/_24sdp"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_86sdp"
            android:layout_height="@dimen/_86sdp"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/ic_baseline_check_circle_outline_24"
            />

        <com.noscale.edelweiss.common.widget.typography.EdelweissCaptionTextView
            android:id="@+id/tv_booking_go_to_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_direction_txt"
            android:layout_marginTop="@dimen/_17sdp"
            android:layout_marginBottom="@dimen/_7sdp"
            />

        <com.noscale.edelweiss.common.widget.EdelweissButton
            android:id="@+id/b_booking_later"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/later_txt"
            />

    </LinearLayout>

</com.noscale.edelweiss.common.widget.EdelweissConstraintLayout>