<?xml version="1.0" encoding="utf-8"?>
<com.noscale.edelweiss.common.widget.EdelweissConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_17sdp"
    >

    <LinearLayout
        android:id="@+id/ll_gallery_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_gallery_picker"
            android:layout_width="@dimen/_84sdp"
            android:layout_height="@dimen/_167sdp"
            android:adjustViewBounds="true"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/ic_camera_alt"
            />

        <com.noscale.edelweiss.common.widget.typography.EdelweissBody1TextView
            android:id="@+id/tv_gallery_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/path_txt"
            />

        <com.noscale.edelweiss.common.widget.typography.EdelweissBody1TextView
            android:id="@+id/tv_gallery_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:text="@string/category_txt"
            />

        <com.noscale.edelweiss.common.EdelweissSpinner
            android:id="@+id/sp_gallery_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <com.noscale.edelweiss.common.widget.EdelweissButton
            android:id="@+id/b_gallery_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_txt"
            />

    </LinearLayout>
</com.noscale.edelweiss.common.widget.EdelweissConstraintLayout>