<?xml version="1.0" encoding="utf-8"?>
<com.noscale.edelweiss.common.widget.EdelweissConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:padding="@dimen/_17sdp"
    >

    <ScrollView
        android:id="@+id/sv_wp_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_wp_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <com.noscale.edelweiss.common.widget.typography.EdelweissSubtitle2TextView
                android:id="@+id/tv_package_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginBottom="@dimen/_3sdp"
                android:text="@string/package_name_txt"
                />

            <com.noscale.edelweiss.common.widget.typography.EdelweissSubtitle1TextView
                android:id="@+id/tv_package_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginBottom="@dimen/_3sdp"
                tools:text="@tools:sample/lorem"
                />

            <com.noscale.edelweiss.common.widget.typography.EdelweissSubtitle2TextView
                android:id="@+id/tv_package_price_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginBottom="@dimen/_3sdp"
                android:text="@string/package_price_txt"
                />

            <com.noscale.edelweiss.common.widget.typography.EdelweissSubtitle1TextView
                android:id="@+id/tv_package_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginBottom="@dimen/_3sdp"
                tools:text="@tools:sample/lorem"
                />

            <com.noscale.edelweiss.common.widget.typography.EdelweissSubtitle2TextView
                android:id="@+id/tv_package_total_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginBottom="@dimen/_3sdp"
                android:text="@string/total_buffet_txt"
                />

            <com.noscale.edelweiss.common.widget.typography.EdelweissSubtitle1TextView
                android:id="@+id/tv_package_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginBottom="@dimen/_3sdp"
                tools:text="@tools:sample/lorem"
                />

            <com.noscale.edelweiss.common.widget.typography.EdelweissSubtitle2TextView
                android:id="@+id/tv_package_buffet_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginBottom="@dimen/_3sdp"
                android:text="@string/buffet_type_txt"
                />

            <com.noscale.edelweiss.common.widget.typography.EdelweissSubtitle1TextView
                android:id="@+id/tv_package_buffet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginBottom="@dimen/_3sdp"
                tools:text="@tools:sample/lorem"
                />

            <com.noscale.edelweiss.common.widget.typography.EdelweissSubtitle2TextView
                android:id="@+id/tv_package_detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginBottom="@dimen/_3sdp"
                android:text="@string/detail_package_txt"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_package_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginBottom="@dimen/_3sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="3"
                />

            <com.noscale.edelweiss.common.widget.typography.EdelweissSubtitle2TextView
                android:id="@+id/tv_package_bonus_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginBottom="@dimen/_3sdp"
                android:text="@string/bonus_package_txt"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_package_bonus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginBottom="@dimen/_3sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="3"
                />

        </LinearLayout>

    </ScrollView>

</com.noscale.edelweiss.common.widget.EdelweissConstraintLayout>